Colour & meta updates (beige wasn't pretty...)

--- a/index.html
+++ b/index.html
@@ -4,9 +4,20 @@
     <title>Coronavirus Slogan Generator</title>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="author" content="Aurorum" />
     <meta
       name="description"
-      content="A way to generate and download spoofs of the British government's coronavirus slogan."
+      content="Provides a way to generate and download spoofs of the British government's coronavirus slogan."
+    />
+    <meta property="og:title" content="Coronavirus Slogan Generator" />
+    <meta
+      property="og:description"
+      content="Provides a way to generate and download spoofs of the British government's coronavirus slogan"
+    />
+    <meta property="og:image" content="./assets/thumnail.png" />
+    <meta
+      property="og:url"
+      content="https://aurorum.github.io/coronavirus-slogan-generator"
     />
     <link rel="icon" href="./assets/favicon.png" type="image/png" />
     <script type="text/javascript" src="./scripts.js"></script>
