--- a/index.html
+++ b/index.html
@@ -10,11 +10,15 @@
       content="Provides a way to generate and download spoofs of the British government's coronavirus slogan."
     />
     <meta property="og:title" content="Coronavirus Slogan Generator" />
+    <meta property="og:type" content="website" />
     <meta
       property="og:description"
       content="Provides a way to generate and download spoofs of the British government's coronavirus slogan"
     />
-    <meta property="og:image" content="./assets/thumnail.png" />
+    <meta
+      property="og:image"
+      content="https://aurorum.github.io/coronavirus-slogan-generator/assets/thumbnail.png"
+    />
     <meta
       property="og:url"
       content="https://aurorum.github.io/coronavirus-slogan-generator"
